--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "William Hurley",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "twit": "^2.2.5",
     "unique-random-array": "^1.0.0",
     "unirest": "^0.5.1"
